Move back to java 8